# geo-tui

./: INSTALL.md  README.md  main.py  pyproject.toml
src/geo_tui/: __init__.py  cli.py
src/geo_tui/application/: __init__.py
src/geo_tui/application/services/: map_service.py  navigation_service.py
src/geo_tui/application/use_cases/: load_map.py  navigate_map.py  update_map_data.py
src/geo_tui/domain/: __init__.py
src/geo_tui/domain/entities/: map_data.py  viewport.py
src/geo_tui/domain/interfaces/: __init__.py  geometry_loader.py  projection.py  renderer.py
src/geo_tui/infrastructure/: __init__.py
src/geo_tui/infrastructure/geometry/: __init__.py  geojson_loader.py  geopandas_loader.py
src/geo_tui/infrastructure/projection/: __init__.py  mercator_projection.py
src/geo_tui/infrastructure/rendering/: __init__.py  braille_renderer.py
src/geo_tui/presentation/: __init__.py  app.py
src/geo_tui/presentation/widgets/: __init__.py  map_header.py  map_status_bar.py  map_widget.py
tests/: __init__.py  conftest.py
tests/application/: test_map_service.py  test_navigation_service.py
tests/domain/: test_map_data.py  test_viewport.py
tests/infrastructure/: test_projection.py  test_rendering.py
